# Trim

./: .gitignore  LICENSE  README.md  pyproject.toml
trim/: __init__.py  __main__.py  cli.py  csv_exporter.py  excel_reader.py  info.py  parse.py  splice.py
