[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trim"
version = "0.1.0"
description = "Excel文件处理工具，支持信息提取、解析和合并"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "openpyxl>=3.0.0",
    "pandas>=1.5.0",
    "click>=8.0.0",
]

[project.scripts]
trim = "trim.cli:main"

[tool.setuptools.packages.find]
include = ["trim*"]
